--- a/style.scss
+++ b/style.scss
@@ -576,6 +576,12 @@ $secondary-color: #e4022e;
                     max-width: 100%;
                     width: 250px;
                 }
+                &__imgText{
+                    img{
+                        max-width: 100%;
+                    }
+                    max-width: 250px;
+                }
                 &__imgProduct{
                     img{
                         align-self: center;
@@ -598,6 +604,11 @@ $secondary-color: #e4022e;
             .es-cross{
                 &__title{
 
+                }
+                &__badge{
+                    width: 100px;
+                    right: -20px;
+                    top: 10px;
                 }
             }
         }
