--- a/style.scss
+++ b/style.scss
@@ -6,7 +6,7 @@ src: url("./fonts/Montserrat-Regular.ttf") format("opentype");
 }
 @font-face {
     font-family: "MuseoSans";
-    src: url("./fonts/MuseoSans_700.otf") format("opentype");
+    src: url("./fonts/MuseoSans-900.otf") format("opentype");
     }
 $regular: "Montserrat";
 $title: "MuseoSans";
@@ -191,6 +191,7 @@ $secondary-color: #e4022e;
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
+            min-height: 1000px;
             &__uppperContent{
                 display: flex;
                 flex-direction: column;
@@ -203,26 +204,26 @@ $secondary-color: #e4022e;
                 z-index: 1;
                 width: 220px;
                 animation: rotate 35s linear infinite;
+                
             }
             &__text{
                 z-index: 10;
+                margin-top: 50px;
                 &--red{
-                    background-color: $secondary-color;
                     text-transform: uppercase;
                     padding: 5px;
                     transform: rotate(-3deg);
                     border-radius: 5px;
                     font-weight: 900;
+                    font-family: $title;
+                    font-size: 35px;
+                    text-shadow: -1px 0 $main-dark, 0 1px $main-dark, 1px 0 $main-dark, 0 -1px $main-dark;
                 }
             }
             &__textImg{
                 z-index: 10;
-                max-width: 400px;
-                background-color:$main-color;
-                border-radius: 5px;
-                padding: 10px;
-                transform: rotate(2deg);
-                margin-top: -8px;
+                max-width: 250px;
+                margin-top: -28px;
             }
             &__textContent{
                 margin: 50px 10px;
@@ -230,11 +231,13 @@ $secondary-color: #e4022e;
                 text-align: center;
                 p{
                     line-height: 1.1;
+                    font-size: 20px;
                 }
             }
             &__types{
                 width: 60%;
                 padding: 20px 50px;
+                margin-top: 100px;
                 
             }
             &__textTitle{
@@ -287,6 +290,9 @@ $secondary-color: #e4022e;
                 }
                 &--short{
                     min-height: 180px;
+                    p{
+                        margin-top: -10px;
+                    }
                 }
             }
             &__biggerImg{
@@ -297,12 +303,13 @@ $secondary-color: #e4022e;
             &__smallerImg{
                 width: 100px;
                 animation: shake 2s infinite;
+                margin-bottom: 0;
             }
             &__flavourSection{
                 background-image: url(/img/section_bg_short.png);
                 background-repeat: no-repeat;
-                background-position: left top;
-                background-size: 35% 90%;
+                background-position: right top;
+                background-size: 20% 90%;
             }
             &__productCtn{
                 display: flex;
@@ -314,34 +321,43 @@ $secondary-color: #e4022e;
             }
             &__imgText{
                 margin-right: 50px;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
                 img{
                     max-width: 350px;
+                    margin-bottom: 30px;
                 }
             }
             &__imgProduct{
                 position: relative;
+                max-width: 300px;
             }
             &__berries{
                 position: absolute;
-                bottom: -8%;
-                left: 12%;
+                bottom: 2%;
+                left: 25%;
                 animation: es-pulse 2s infinite;
                 z-index: 10;
+                max-width: 220px;
             }
             &__text{
                 margin-top: -40px;
-                margin-left: -300px;
+                margin-left: -180px;
                 transform: rotate(-3deg);
                 background-color: $main-dark;
                 width: max-content;
                 padding: 10px 40px;
+                font-size: 16px;
                 font-weight: 900;
                 clip-path: polygon(9% 0, 100% 0%, 100% 100%, 0% 100%);
 
                 &::before{
                     content: url(./img/red-triangleBtn.png);
                     display:inline-block;
-                    transform: rotate(-86deg);
+                    transform: rotate(-83deg);
+                    width: 30px;
                 }
             }
         }
