--- a/style.scss
+++ b/style.scss
@@ -210,6 +210,7 @@ $secondary-color: #e4022e;
                 z-index: 10;
                 margin-top: 50px;
                 &--red{
+                    text-align: center;
                     text-transform: uppercase;
                     padding: 5px;
                     transform: rotate(-3deg);
