cross-sell styling

--- a/style.scss
+++ b/style.scss
@@ -441,6 +441,8 @@ $secondary-color: #e4022e;
             }
         }
         .es-cross{
+            position: relative;
+            z-index: 0;
             &__title{
                 p{
                     text-transform: uppercase;
@@ -468,6 +470,7 @@ $secondary-color: #e4022e;
                 min-height: 400px;
                 display: flex;
                 align-items: flex-end;
+                z-index: -2;
             }
             &__badge{
                 position: absolute;
@@ -504,7 +507,6 @@ $secondary-color: #e4022e;
                 border: 2px solid $secondary-color;
                 animation: swing 2s infinite;
                 font-family: $title;
-
                 &:hover{
                     transition: .5s ease-in-out;
                     transform: rotate(3deg);
@@ -512,9 +514,23 @@ $secondary-color: #e4022e;
                     color: $main-color;
                 }
             }
+            &::after{
+                content: '';
+                width: 129.5%;
+                height: 160px;
+                display: inline-block;
+                position: absolute;
+                bottom: -21px;
+                z-index: -1;
+                background-color: #1355a3;
+                left: -14.7%;
+               
+            }
         }
         .es-footer{
             padding: 40px;
+            background-color: #1355a3;
+            
             &__claims{
                 text-align: justify;
                 font-size: 12px;
@@ -559,6 +575,11 @@ $secondary-color: #e4022e;
                 }
                 &__text{
                     font-size: 20px;
+                }
+            }
+            .es-cross{
+                &::after{
+                    display: none;
                 }
             }
         }
@@ -648,6 +669,9 @@ $secondary-color: #e4022e;
                     width: 100px;
                     right: -20px;
                     top: 10px;
+                }
+                &::after{
+                    display: none;
                 }
             }
         }
