--- a/style.scss
+++ b/style.scss
@@ -125,6 +125,7 @@ $secondary-color: #e4022e;
     padding: 0;
     color: #fff;
     background-color: $main-color;
+    font-display: auto;
         .es-kv{
             background-image: url(./img/kv__bg.png);
             background-repeat: no-repeat;
