--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 @font-face {
   font-family: "Montserrat";
   src: url("./fonts/Montserrat-Regular.ttf") format("opentype");
+  font-display: auto;
 }
 @font-face {
   font-family: "MuseoSans";
   src: url("./fonts/MuseoSans-900.otf") format("opentype");
+  font-display: auto;
 }
 @-webkit-keyframes toggle {
   0% {
