--- a/style.scss
+++ b/style.scss
@@ -602,6 +602,7 @@ $secondary-color: #e4022e;
                    justify-content: flex-end;
                     img{
                         max-width: 200px;
+                        animation: none;
                     }
                 }
             }
